Changelog for service.xbmc.tts
==============================

Current version: 0.0.65
-----------------------

Authors: ruuk, pvagner

TODO:
-----
 Android backend
 Speech for more window types that isn't automatically handled
 Pageination for large texts?
 Subtitle speech? Maybe only possible with something like pysrt and a subtitle file. https://pypi.python.org/pypi/pysrt

EXTERNAL TODO:
--------------
 Test Windows installer on Vista/7/8
 OSX installer?
 Android TTS app for android backend

** 0.0.65 **

Fix for PVR window being handled generically

** 0.0.64 **

Add afplay: wav and mp3 player for OSX
Fix bug causing errors on some backends
Modify Cepstral for slight performance improvement

** 0.0.63 **

Fixed context menu speaking extra texts for underlying window
Fixed View Options menu speaking the view texts rather that the selected item text
TV and Radio channel views now speak the number, channel name and then title for the selected item

** 0.0.62 **

Re-structure audio player backend in a more intelligent manner
Fix Windows audio player
Fix broken on and off sound effect wavs

** 0.0.61 **

Fix for error when using audio players without volume control
Fix for Speech Dispatcher settings not being honored

** 0.0.60 **

Added sound to indicate busy dialog is showing

** 0.0.59 **

Added ability to set volume with paplay
Added volume to pico2wave
Added volume to eSpeak
Added rate, pitch and volume to Cepstral
Added speed and volume to Festival
Added rate and volume to OSXSay
Added module, voice, speed, pitch and volume to Speech-Dispatcher
Added player, speed and volume to Flite

** 0.0.58 **

Fix for possible SAPI error on older windows versions

** 0.0.57 **

Fix error on Google backend on windows caused by speed and volume additions
Fix error on Google backend when language not set
Added volume on SAPI

** 0.0.56 **

Added support for playing MP3 based backends on windows internally
Google backend now works on windows