@@ -17,7 +17,7 @@
     <setting visible="eq(-8,eSpeak)" id="speed.eSpeak" label="Rate (WPM)" type="slider" subsetting="true" option="int" default="175" range="80,450" />
     <setting visible="eq(-9,eSpeak)" id="output_via_espeak.eSpeak" label="Play Speech Directly Via eSpeak" type="bool" subsetting="true" default="false" />
     <setting visible="eq(-10,eSpeak)" id="player.eSpeak" subsetting="true" label="Player" type="action" action="RunScript(service.xbmc.tts,player_dialog,eSpeak)" enable="eq(-1,false)" />
-    <setting visible="eq(-11,eSpeak)" id="volume.eSpeak" enable="eq(-1,sox) | eq(-1,mplayer) | eq(-1,paplay) | eq(-2,true)" label="Volume dB (Via eSpeak Or Supported Player)" type="slider" subsetting="true" option="int" default="0" range="-12,12" />
+    <setting visible="eq(-11,eSpeak)" id="volume.eSpeak" label="Volume dB (Via eSpeak Or Supported Player)" type="slider" subsetting="true" option="int" default="0" range="-12,12" />
 
     <!-- SAPI -->
     <setting visible="eq(-12,SAPI)" id="voice.SAPI" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,SAPI,voice)" />
@@ -59,23 +59,29 @@
     <setting visible="eq(-36,Speech-Dispatcher)" id="pitch.Speech-Dispatcher" label="Pitch" type="slider" subsetting="true" option="int" default="0" range="-100,100" />
     <setting visible="eq(-37,Speech-Dispatcher)" id="volume.Speech-Dispatcher" label="Volume" type="slider" subsetting="true" option="percent" default="100" range="0,100" />
 
-    <!-- SJHtts -->
-    <setting visible="eq(-38,ttsd)" id="perl_server.ttsd" subsetting="true" label="Perl Server" type="bool" default="true" />
-    <setting visible="eq(-39,ttsd)" id="speak_on_server.ttsd" subsetting="true" label="Speak On Server" type="bool" default="false" enable="eq(-1,false)" />
-    <setting visible="eq(-40,ttsd)" id="engine.ttsd" subsetting="true" label="Engine" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,engine)" enable="eq(-2,false)" />
+    <!-- ttsd -->
+    <setting visible="eq(-38,ttsd)" label="Server" type="lsep"/> <!-- SERVER -->
+    <setting visible="eq(-39,ttsd)" id="perl_server.ttsd" subsetting="true" label="Perl Server" type="bool" default="true" />
+    <setting visible="eq(-40,ttsd)" id="speak_on_server.ttsd" subsetting="true" label="Speak On Server" type="bool" default="false" enable="eq(-1,false)" />
+    <setting visible="eq(-41,ttsd)" id="engine.ttsd" subsetting="true" label="Engine" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,engine)" enable="eq(-2,false)" />
 
-    <setting visible="eq(-41,ttsd) + eq(-3,false) + eq(-1,Flite)" id="voice.Flite.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.Flite,Flite)" />
-    <setting visible="eq(-42,ttsd) + eq(-4,false) + eq(-2,eSpeak)" id="voice.eSpeak.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.eSpeak,eSpeak)" />
-    <setting visible="eq(-43,ttsd) + eq(-5,false) + eq(-3,SAPI)" id="voice.SAPI.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.SAPI,SAPI)" />
-    <setting visible="eq(-44,ttsd) + eq(-6,false) + eq(-4,Cepstral)" id="voice.Cepstral.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.Cepstral,Cepstral)" />
-    <setting visible="eq(-45,ttsd) + eq(-7,false) + eq(-5,OSXSay)" id="voice.OSXSay.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.OSXSay,OSXSay)" />
-    <setting visible="eq(-46,ttsd) + eq(-8,false) + eq(-6,Festival)" id="voice.Festival.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.Festival,Festival)" />
-    <setting visible="eq(-47,ttsd) + eq(-9,true)" id="voice.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog,ttsd)" />
-
-    <setting visible="eq(-48,ttsd)" enable="eq(-8,eSpeak) | eq(-8,SAPI) | eq(-8,pico2wave)" id="speed.ttsd" label="Speed" type="slider" subsetting="true" option="int" default="0" range="-20,20" />
-    <setting visible="eq(-49,ttsd)" enable="eq(-10,false)" id="player.ttsd" subsetting="true" label="Player" type="action" action="RunScript(service.xbmc.tts,player_dialog,ttsd)" />
-    <setting visible="eq(-50,ttsd)" id="host.ttsd" subsetting="true" label="IP Address" type="ipaddress" default="127.0.0.1" />
-    <setting visible="eq(-51,ttsd)" id="port.ttsd" subsetting="true" label="Port" type="number" default="8256" />
+    <setting visible="eq(-42,ttsd) + eq(-3,false) + eq(-1,Flite)" id="voice.Flite.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.Flite,Flite)" />
+    <setting visible="eq(-43,ttsd) + eq(-4,false) + eq(-2,eSpeak)" id="voice.eSpeak.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.eSpeak,eSpeak)" />
+    <setting visible="eq(-44,ttsd) + eq(-5,false) + eq(-3,SAPI)" id="voice.SAPI.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,ttsd,voice.SAPI,SAPI)" />
+    <setting visible="eq(-45,ttsd) + eq(-6,false) + eq(-4,Cepstral)" id="voice.Cepstral.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.Cepstral,Cepstral)" />
+    <setting visible="eq(-46,ttsd) + eq(-7,false) + eq(-5,OSXSay)" id="voice.OSXSay.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.OSXSay,OSXSay)" />
+    <setting visible="eq(-47,ttsd) + eq(-8,false) + eq(-6,Festival)" id="voice.Festival.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,settings_dialog,voice.Festival,Festival)" />
+    <setting visible="eq(-48,ttsd) + eq(-9,true)" id="voice.ttsd" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog,ttsd)" />
+	
+    <setting visible="eq(-49,ttsd)" enable="eq(-8,eSpeak) | eq(-8,SAPI) | eq(-8,pico2wave)" id="remote_speed.ttsd" label="Server Speed (If Supported)" type="slider" subsetting="true" option="int" default="0" range="-20,20" />
+    <setting visible="eq(-50,ttsd)" enable="eq(-11,false)" id="remote_volume.ttsd" label="Server Volume dB (If Supported)" type="slider" subsetting="true" option="int" default="0" range="-12,12" />
+    <setting visible="eq(-51,ttsd)" label="Player" type="lsep"/> <!-- PLAYER -->
+    <setting visible="eq(-52,ttsd)" enable="eq(-12,false)" id="player.ttsd" subsetting="true" label="Player" type="action" action="RunScript(service.xbmc.tts,player_dialog,ttsd)" />
+    <setting visible="eq(-53,ttsd)" enable="eq(-1,sox) | eq(-1,mplayer) | eq(-1,afplay)" id="player_speed.ttsd" label="Player Speed (If Supported)" type="slider" subsetting="true" option="int" default="100" range="20,200" />
+    <setting visible="eq(-54,ttsd)" enable="eq(-2,sox) | eq(-2,mplayer) | eq(-2,paplay) | eq(-2,afplay)" id="player_volume.ttsd" label="Player Volume dB (If Supported)" type="slider" subsetting="true" option="int" default="0" range="-12,12" />
+    <setting visible="eq(-55,ttsd)" label="Connection" type="lsep"/> <!-- Connection -->
+    <setting visible="eq(-56,ttsd)" id="host.ttsd" subsetting="true" label="IP Address" type="ipaddress" default="127.0.0.1" />
+    <setting visible="eq(-57,ttsd)" id="port.ttsd" subsetting="true" label="Port" type="number" default="8256" />
 
   </category>
   <category label="Options">
